# Magpie

./: .gitignore  .gitmodules  Agent.cpp  Agent.h  AnimatedModel.cpp  AnimatedModel.hpp  AnimatedText.cpp  AnimatedText.hpp  AnimationManager.cpp  AnimationManager.hpp  AssetLoader.cpp  AssetLoader.hpp  CMakeLists.txt  Clickable.cpp  Clickable.hpp  DisplayCase.cpp  DisplayCase.hpp  Door.cpp  Door.hpp  Entity.cpp  Entity.h  FloorTile.cpp  FloorTile.hpp  GameAgent.cpp  GameAgent.hpp  GameCharacter.cpp  GameCharacter.hpp  GameMode.cpp  GameMode.hpp  Grid.cpp  Grid.h  Guard.cpp  Guard.hpp  GuardAgent.cpp  GuardAgent.h  GuardModel.cpp  GuardModel.h  Inventory.cpp  Inventory.h  Item.cpp  (+58 more)
animation/: AnimatedModel.cpp  AnimatedModel.hpp  AnimatedText.hpp  AnimationManager.hpp  TransformAnimation.cpp  TransformAnimation.hpp  jamfile
base/: MenuMode.cpp  TransformAnimation.cpp  TransformAnimation.hpp  draw_text.hpp  jamfile
characters/: GameAgent.cpp  GameAgent.hpp  Guard.cpp  Guard.hpp  GuardAgent.cpp  Inventory.cpp  Inventory.h  Player.cpp  Player.hpp  jamfile
docs/: index.html
level/: MagpieLevel.cpp  MagpieLevel.hpp  jamfile  load_level.cpp  load_level.hpp
menus/: jamfile  startmenu.cpp  startmenu.hpp
meshes/: anim_test.blend  anim_test.dae  bounding_box.blend  building-tiles.blend  camera_transform.blend  donut.blend  doorGreen_openAnim.blend  doorPink_openAnim.blend  door_openAnim.blend  export-anims.py  export-scene.py  export-transform-animation-hierarchy.py  export.bat  guardDog_alert.blend  guardDog_cautious.blend  guardDog_chase.blend  guardDog_confused.blend  (+19 more)
(+138 files in other folders)
